fix text alignment

--- a/src/sass/partials/components/_payment.scss
+++ b/src/sass/partials/components/_payment.scss
@@ -8,6 +8,10 @@
 	justify-content: center;
 }
 
+.page-title {
+	text-align: center;
+}
+
 .payment-buttons {
 	justify-content: center;
 }
