--- a/src/sass/partials/layout/_grid.scss
+++ b/src/sass/partials/layout/_grid.scss
@@ -115,12 +115,11 @@
 
 .promo-section {
 	height: 400px;
-	background: lightcoral;
 }
 
 .stats-section {
 	display: grid;
-	// background-color: var(--color-4-normal);
+	// background-color: var(--color-6-normal);
 }
 
 .top-beer {
